@@ -1,0 +1,34 @@
+# Drone configuration file. See https://docs.drone.io/server/reference/ for a
+# complete list of configuration options.
+
+# Required string value provides your Gitea oauth Client ID.
+DRONE_GITEA_CLIENT_ID="your-id-goes-here"
+
+# Required string value provides your Gitea oauth Client Secret.
+DRONE_GITEA_CLIENT_SECRET="your-secret-goes-here"
+
+# Required string value provides your Gitea server address. For example
+# https://gitea.company.com
+DRONE_GITEA_SERVER="https://gitea-server.example.com/"
+
+# Required string value provides the shared secret generated in the previous
+# step. This is used to authenticate the rpc connection between the server and
+# runners. The server and runner must be provided the same secret value.
+DRONE_RPC_SECRET="your-rpc-secret-goes-here"
+
+# Required string value provides your external hostname or IP address. If using
+# an IP address you may include the port. For example drone.company.com.
+DRONE_SERVER_HOST="drone-ci.example.com"
+
+# Required string value provides your external protocol scheme. This value
+# should be set to http or https. This field defaults to https if you configure
+# ssl or acme.
+DRONE_SERVER_PROTO="https"
+
+# Optional boolean value configures Drone to authenticate when cloning public
+# repositories.
+# DRONE_GIT_ALWAYS_AUTH=true
+
+# Required string value configures ports to publish for docker: space-separated
+# list of <hostport>:<containerport> tuples
+DOCKER_PUBLISH="8080:80 8443:443"
