@@ -1,0 +1,32 @@
+[Unit]
+Description=drone.io build server
+Documentation=https://docs.drone.io/
+
+AssertPathIsDirectory=/var/lib/drone
+AssertPathIsReadWrite=/var/lib/drone
+
+After=network.target
+Requires=network.target
+After=mysqld.target
+After=postgresql-9.3.service
+After=postgresql-9.4.service
+After=postgresql-9.5.service
+After=postgresql-9.6.service
+After=postgresql-10.service
+After=postgresql-11.service
+After=postgresql-12.service
+
+[Service]
+User=drone
+Group=drone
+
+Environment="DRONE_CONFIG_FILE=/etc/drone/app.ini"
+
+ExecStart=drone.sh
+ExecStop=docker container stop drone
+ExecStop=docker container rm drone
+
+Restart=always
+
+[Install]
+WantedBy=multi-user.target
